--- a/recipes/segagoreng.html
+++ b/recipes/segagoreng.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>        
-        <h1>Resep Sega Goreng</h1>
+        <h1>Sega Goreng</h1>
 
         <p><a href="../index.html">Home</a></p>
 
@@ -59,6 +59,5 @@
            geni gede. Cilikna geni meng sedeng-cilik, tutup, lan jor kosih umeb 
            kosih sega empuk lan banyu nyerep, kisaran 20 tekan 25 menit. Ratakna 
            ng loyang, trus lebokna kulkas kosih atis, kisaran 2 jam.</p>
-
     </body>
 </html>
