Nambah resep baru, rendang sapi, modif segagoreng sama index

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>
         <h1>Odin Recipes</h1>
         
-        <a href="recipes/segagoreng.html">Sega Goreng</a>
-
-
-
+        <ul>
+            <li><a href="recipes/segagoreng.html">Sega Goreng</a></li>
+            <li><a href="recipes/miegoreng.html">Mie Goreng</a></li>
+            <li><a href="recipes/rendangsapi.html">Rendang Sapi</a></li>
+        </ul>
     </body>
 </html>
