benerin jarak disemua project

--- a/recipes/miegoreng.html
+++ b/recipes/miegoreng.html
@@ -38,18 +38,9 @@
         <h3>Cara masake</h3>
 
          <ol>
-            <li>Godog banyu neng panci kosi umeb, terus masak mi ramen kosi empuk, 
-            sekitar 3 menit. Cemplungna mi meng banyu adem men ora kematengen, terus 
-            saring/tebus. Kucuri mi nggo 1 sendok makan minyak sayur terus sisihna.</li>
-            <li>Wadahna potongan ayam meng mangkok, campur nganggo minyak zaitun, uyah bawang 
-            putih, lan lada ireng. Panasna 1 sendok makan minyak neng wajan nganggo geni 
-            gede, terus masak lan aduk ayam kosi warnane ora pink maning, sekitar 5 menit. 
-            Lebokna bawang merah lan bawang putih, aduk terus kosi warnane madan coklat. 
-            Tambahna kol, wortel, brokoli, lan jamur, terus masak lan aduk kosi sayurane 
-            empuk, sekitar 5 menit.</li>
-            <li>Lebokna mi ramen, kecap asin, kecap manis, lan saus tiram; campur mi lan sause 
-            bareng sayuran karo ayam. Masak kosi bumbune umeb lan nyerep, tawuri nganggo uyah 
-            lan lada, terus sajikna pas esih anget.</li>
+            <li>Godog banyu neng panci kosi umeb, terus masak mi ramen kosi empuk, sekitar 3 menit. Cemplungna mi meng banyu adem men ora kematengen, terus saring/tebus. Kucuri mi nggo 1 sendok makan minyak sayur terus sisihna.</li>
+            <li>Wadahna potongan ayam meng mangkok, campur nganggo minyak zaitun, uyah bawang  putih, lan lada ireng. Panasna 1 sendok makan minyak neng wajan nganggo geni gede, terus masak lan aduk ayam kosi warnane ora pink maning, sekitar 5 menit. Lebokna bawang merah lan bawang putih, aduk terus kosi warnane madan coklat. Tambahna kol, wortel, brokoli, lan jamur, terus masak lan aduk kosi sayurane empuk, sekitar 5 menit.</li>
+            <li>Lebokna mi ramen, kecap asin, kecap manis, lan saus tiram; campur mi lan sause  bareng sayuran karo ayam. Masak kosi bumbune umeb lan nyerep, tawuri nganggo uyah lan lada, terus sajikna pas esih anget.</li>
         </ol>
         
     </body>
