--- a/recipes/segagoreng.html
+++ b/recipes/segagoreng.html
@@ -36,29 +36,15 @@
         <h3>Cara masake</h3>
 
         <ol>
-            <li>Panasi wajan anti lengket gede ng geni sedeng. 
-                cipreti go lenga men ora lengket.</li>
-            <li>geburna ndog meng sangan panas trus masak kosi pinggirane madan mateng. 
-                ntas pinggirane men ndog sing durung mateng 
-                keli meng ngingsor, masak sekitar 1 menit. Walik ndog utuh 
-                lan masak kosih mateng, sekitar 30 detik. 
-                Pindahna ndog meng talenan lan cacag amba 1,5 cm. Sisihna.</li>
-            <li>Panasna lenga sayur neng sangan utawa penggorengan amba go geni gede. 
-                lebokna bawang bombay, godong bawang, cengis, lan bawang putih. 
-                Masak lan aduk kosih bawang amoh, sekitar 3 tekan 5 menit. 
-                lebokna ayam, urang, ketumbar, dan jinten; aduk rata. 
-                Masak lan aduk maning kisaran 5 menit.</li>
-            <li>lebokna sega sing ws mateng, kecap manis, lan rajangan ndog miki; 
-                masak kosih sega panas merata lan ayam wis ora warna pink 
-                maning bagian tengahe, kisaran 3 tekan 5 menit.</li>
+            <li>Panasi wajan anti lengket gede ng geni sedeng. cipreti go lenga men ora lengket.</li>
+            <li>geburna ndog meng sangan panas trus masak kosi pinggirane madan mateng. ntas pinggirane men ndog sing durung mateng keli meng ngingsor, masak sekitar 1 menit. Walik ndog utuh lan masak kosih mateng, sekitar 30 detik. Pindahna ndog meng talenan lan cacag amba 1,5 cm. Sisihna.</li>
+            <li>Panasna lenga sayur neng sangan utawa penggorengan amba go geni gede. lebokna bawang bombay, godong bawang, cengis, lan bawang putih. Masak lan aduk kosih bawang amoh, sekitar 3 tekan 5 menit. lebokna ayam, urang, ketumbar, dan jinten; aduk rata. Masak lan aduk maning kisaran 5 menit.</li>
+            <li>lebokna sega sing ws mateng, kecap manis, lan rajangan ndog miki; masak kosih sega panas merata lan ayam wis ora warna pink maning bagian tengahe, kisaran 3 tekan 5 menit.</li>
         </ol>
 
         <h3>Tips</h3>
 
-        <p>Cara masak sega: godog 2 gelas banyu lan 1 gelas beras meng panci go 
-           geni gede. Cilikna geni meng sedeng-cilik, tutup, lan jor kosih umeb 
-           kosih sega empuk lan banyu nyerep, kisaran 20 tekan 25 menit. Ratakna 
-           ng loyang, trus lebokna kulkas kosih atis, kisaran 2 jam.</p>
+        <p>Cara masak sega: godog 2 gelas banyu lan 1 gelas beras meng panci go geni gede. Cilikna geni meng sedeng-cilik, tutup, lan jor kosih umeb kosih sega empuk lan banyu nyerep, kisaran 20 tekan 25 menit. Ratakna ng loyang, trus lebokna kulkas kosih atis, kisaran 2 jam.</p>
 
     </body>
 </html>
